# qt-qml-system-monitoring

./: CMakeLists.txt  Main.qml  main.cpp  resources.qrc  systeminfo.cpp  systeminfo.h
